--- a/src/cryptoadvance/specter/static/style.css
+++ b/src/cryptoadvance/specter/static/style.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
   font-family: "Social";
   font-style: normal;
@@ -188,6 +189,24 @@
 
   .animate-spin-slow {
     animation: spin 1.5s linear infinite;
+  }
+
+  /*
+   *
+   * ScrollBars
+   *
+   */
+
+  *::-webkit-scrollbar-track {
+    @apply bg-transparent w-2 p-[2px]; 
+  }
+
+  *::-webkit-scrollbar-thumb {
+    @apply w-1 bg-dark-700 rounded-xl;
+  }
+
+  *::-webkit-scrollbar-corner {
+    @apply bg-transparent;
   }
 }
 
